Uploading Bug Fixed